--- a/HTML/Templates/bio_container.html
+++ b/HTML/Templates/bio_container.html
@@ -4,7 +4,7 @@
 <body>
   <div class="bio_container">
     <div class="profile_pic">
-      <img src="{{ user.get_picture_profile() }}" />
+      <img src="{{ user.get_profile() }}" />
     </div>
     <div class="info_container">
       <div class="name">{{ user.get_name() }}</div>
