--- a/HTML/Templates/bio_container.html
+++ b/HTML/Templates/bio_container.html
@@ -4,11 +4,11 @@
 <body>
   <div class="bio_container">
     <div class="profile_pic">
-      <img src="{{ current_user.get_profile() }}" />
+      <img src="{{ user.get_profile() }}" />
     </div>
     <div class="info_container">
-      <div class="name">{{ current_user.get_name() }}</div>
-      <div class="bio">{{ current_user.get_description() }}</div>
+      <div class="name">{{ user.get_name() }}</div>
+      <div class="bio">{{ user.get_description() }}</div>
     </div>
   </div>
 </body>
